# eng_read

./: .env  .gitignore  CLAUDE.md  Dockerfile  README.md  TODO.md  docker-compose.yml  eslint.config.js  llm_providers.json  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vitest.config.ts
.claude/: settings.local.json
.claude/agents/: product-designer.md  tech-spec-writer.md
.nuxt/: components.d.ts  imports.d.ts  nitro.json  nuxt.d.ts  nuxt.json  tsconfig.json  tsconfig.server.json
.nuxt/cache/nuxt/icon/: heroicons_arrowright_30_qwrd25paDFiX7gbov7QthpM8CWW_X62W87I3GosoZs.json
.nuxt/dev/: index.mjs  index.mjs.map
.nuxt/manifest/: latest.json
.nuxt/manifest/meta/: cf00d97b-b35b-438d-9f9c-771c3aa1c2c2.json  dev.json
.nuxt/tailwind/: postcss.mjs
.nuxt/types/: build.d.ts  components.d.ts  imports.d.ts  nitro-imports.d.ts  nitro-routes.d.ts  plugins.d.ts  schema.d.ts
.output/: nitro.json
.output/public/_nuxt/: BE9KcCiK.js  CBqICK_W.js  CMuRweaT.js  Cl34_P-7.js
.output/public/_nuxt/builds/: latest.json
.output/server/: index.mjs  package.json
.output/server/chunks/_/: vocabulary.service.mjs  vocabulary.service.mjs.map
.output/server/chunks/nitro/: nitro.mjs  nitro.mjs.map
.output/server/chunks/routes/: renderer.mjs  renderer.mjs.map
.output/server/chunks/routes/api/: health.get.mjs  health.get.mjs.map  index.get.mjs  index.get.mjs.map
.output/server/chunks/routes/api/auth/: login.post.mjs  login.post.mjs.map  logout.post.mjs  logout.post.mjs.map  register.post.mjs  register.post.mjs.map
.output/server/chunks/routes/api/learning/: progress.get.mjs  progress.get.mjs.map  submit.post.mjs  submit.post.mjs.map
.output/server/chunks/routes/api/llm/: translate.post.mjs  translate.post.mjs.map
.output/server/chunks/routes/api/vocabulary/: add.post.mjs  add.post.mjs.map
assets/css/: main.css
backend/: .env.example  .gitignore  CONFIG_UPDATE_SUMMARY.md  LLM_TESTING_SUMMARY.md  Makefile  README.md  README_UV.md  SETUP.md  gunicorn.conf.py  pyproject.toml  run.py  test_api_providers.json
backend/app/: __init__.py  config.py  extensions.py
backend/app/models/: __init__.py  learning.py  statistics.py  user.py  vocabulary.py
backend/app/services/: __init__.py  learningService.py  llmService.py  statisticsService.py  userService.py  vocabularyService.py
backend/app/utils/: __init__.py  auth.py  decorators.py  helpers.py  validators.py
backend/app/views/: __init__.py  auth.py  learning.py  llm.py  main.py  statistics.py  vocabulary.py
backend/config/: llm_config.json
backend/docs/: LLM_INTEGRATION.md
backend/scripts/: dev_setup.py  llm_config_examples.py  migrate.py  mock_llm_server.py  seed_data.py  test_config_loading.py  test_config_simple.py  test_llm.py  test_new_config.py
backend/tests/: README.md  conftest.py  run_all_tests.py  test_app.py  test_llm_api.py  test_llm_basic.py  test_llm_config.py  test_llm_integration.py  test_llm_service.py  test_llm_simple.py  test_llm_templates.py  test_models.py
components/base/: Button.vue
components/features/: TranslationTool.vue
composables/: useAuth.ts  useLLM.ts  useVocabulary.ts
doc/: style.md
doc/product/: adaptive-difficulty-system.md  llm-module-design.md  product-design.md  product-roadmap.md  ux-enhancement-recommendations.md
doc/technical_spec/: api-specification.md  llm-module-technical-specification.md  technical-specification-backend.md  technical-specification-database.md  technical-specification-frontend.md  technical-specification-overview.md  technical-specification.md
frontend/: .env.example  .eslintrc.cjs  .eslintrc.json  .gitignore  .prettierrc  Dockerfile  autoprefixer.config.js  docker-compose.yml  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  test-scripts.json  tsconfig.json  vite.config.ts  vite.prod.config.ts  vitest.config.ts
frontend/.github/workflows/: ci.yml
frontend/docker/: default.conf  nginx.conf
frontend/public/: manifest.json  sw.js
frontend/scripts/: deploy.sh
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/base/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Progress.tsx  Spinner.tsx  Textarea.tsx  index.ts
frontend/src/components/base/__tests__/: Button.test.tsx  Input.test.tsx
frontend/src/components/common/: Dropdown.tsx  Loading.tsx  Modal.tsx  Tabs.tsx  Toast.tsx  Tooltip.tsx  index.ts
frontend/src/components/features/: AchievementBadge.tsx  LearningProgressBar.tsx  QuizOption.tsx  VocabularyCard.tsx  index.ts
frontend/src/hooks/: useApi.ts  useAuth.ts  useLearning.ts
frontend/src/hooks/__tests__/: useAuth.test.tsx
frontend/src/pages/: DashboardPage.tsx  HomePage.tsx  LoginPage.tsx  NotFoundPage.tsx  RegisterPage.tsx
frontend/src/pages/__tests__/: HomePage.test.tsx
frontend/src/router/: RouteGuards.tsx  index.tsx  navigation.ts
frontend/src/services/: api.ts  auth.ts  common.ts  index.ts  statistics.ts  vocabulary.ts
frontend/src/store/: authStore.ts  index.ts  learningStore.ts  uiStore.ts
frontend/src/styles/: components.css  globals.css  themes.css
frontend/src/test/: README.md  setup.ts
frontend/src/test/types/: test-types.ts
frontend/src/test/utils/: matchers.ts  test-utils.tsx
frontend/src/types/: index.ts
frontend/tests/e2e/: auth.spec.ts
layouts/: default.vue
pages/: index.vue
prisma/: dev.db  schema.prisma  seed.ts
server/api/: health.get.ts
server/api/auth/: login.post.ts  logout.post.ts  register.post.ts
server/api/learning/: progress.get.ts  submit.post.ts
server/api/llm/: translate.post.ts
server/api/vocabulary/: add.post.ts  index.get.ts
server/middleware/: auth.ts
server/services/: auth.service.ts  llm.service.ts  vocabulary.service.ts
types/: api.ts  auth.ts  global.d.ts  learning.ts  llm.ts  vocabulary.ts
